--- a/views/home.html
+++ b/views/home.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <img src="images/logo-mercado-liebre.svg" alt="Logo Mercado liebre">
-        <p>Lugar para poner la barra de búsqueda</p>
+        <div>Lugar para poner la barra de búsqueda</div>
         <p>Comprá en cuotas y sin tarjeta de crédito</p>
         <nav> <!--barra  de navegación con lista desordenada-->
             <ul>
